# modmiiDownloader

./: .gitignore  D2xCheckGrid.ui  DownloadListSection.ui  DownloadWidgets.py  LICENSE  SearchDialog.py  SearchDialog.ui  ThemeGrid.py  ThemeGrid.ui  WaninCheckGrid.ui  ciosWidgets.py  d2xCheckGrid.py  d2xCheckGrid.ui  download.json  downloadWidgets.py  downloader.json  formold.ui  main.py  mainWindow.ui  mainwindow.ui  pyproject.toml  rc_resource.py  requests.txt  requirements.txt  resource.qrc  resources.py  searchWidgets.py  start.sh  ui_D2xCheckGrid.py  ui_DownloadListSection.py  ui_DownloadSection.py  ui_SearchDialog.py  ui_ThemeGrid.py  ui_WaninCheckGrid.py  ui_d2xCheckGrid.py  ui_main.py  ui_mainWindow.py  ui_mainwindow.py  ui_search.py  ui_waninCheckGrid.py  (+3 more)
.github/workflows/: build.yml
