[project]
name = "ModMii Downloader UI"

[tool.pyside6-project]
files = [
"DownloadWidgets.py",
"assets/download.svg",
"assets/exploit.svg",
"assets/heart-solid.svg",
"assets/heart.svg",
"assets/icon.png",
"assets/ios.svg",
"assets/nus.svg",
"assets/program.svg",
"assets/settings.svg",
"assets/shield.svg",
"assets/theme.svg",
"assets/update.svg",
"d2xCheckGrid.py",
"d2xCheckGrid.ui",
"downloader.json",
"main.py",
"mainWindow.ui",
"resource.qrc",
"resources.py",
"waninCheckGrid.py",
"waninCheckGrid.ui",
]
