[project]
name = "ModMii Downloader UI"

[tool.pyside6-project]
files = [
"D2xCheckGrid.ui",
"ThemeGrid.py",
"ThemeGrid.ui",
"WaninCheckGrid.ui",
"assets/download.svg",
"assets/exploit.svg",
"assets/heart-solid.svg",
"assets/heart.svg",
"assets/icon.png",
"assets/ios.svg",
"assets/nus.svg",
"assets/program.svg",
"assets/semiauto-update.svg",
"assets/settings.svg",
"assets/shield.svg",
"assets/theme.svg",
"assets/update.svg",
"ciosWidgets.py",
"downloadWidgets.py",
"downloader.json",
"main.py",
"mainWindow.ui",
"resource.qrc",
"resources.py",
"utils.py",
]
